--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 
+<div>
+    
+</div>
+
+<app-forms></app-forms>
+
 <router-outlet></router-outlet>
