--- a/src/app/forms/forms.component.html
+++ b/src/app/forms/forms.component.html
@@ -7,36 +7,23 @@
     
     <h2> Angular TDF Forms sample </h2>
 
-    <label>
-      1. Your name : 
-      <input type="text">
-    </label>  <br>
+    <label> 1. Your name : </label> <input type="text"> <br>
 
-    <label> 
-      2. select gender : 
-      <input type="radio" name="gender" value="male"> Male
-      <input type="radio" name="gender" value="female"> Female
-    </label>   <br>
-    
+    <label> 2. select gender : </label> <input type="radio" name="gender" value="male"> Male <br>
+    <input type="radio" name="gender" value="female"> Female <br>
 
-    <label> 
-      3. Select your eating prefernce :
-      <input type="checkbox" name="eat"> I am a vegeterian
-      <input type="checkbox" name="eat"> I am a eggeterian 
-      <input type="checkbox" name="eat"> I am a non-vegeterian 
-    </label> <br>
-    
+    <label> 3. Select your eating prefernce : </label>
+    <input type="checkbox" name="eat"> I am a vegeterian
+    <input type="checkbox" name="eat"> I am a eggeterian 
+    <input type="checkbox" name="eat"> I am a non-vegeterian <br>
 
-    <label> 
-      4. select your highest education : 
-      <select name="education">
-        <option value="Tenth"> Tenth X </option>
-        <option value="Inter"> Inter XII </option>
-        <option value="Degree"> Degree </option>
-        <option value="Matsers"> Master's </option>
-      </select> 
-    </label> <br>
-    
+    <label> 4. select your highest education : </label>
+    <select name="education">
+      <option value="Tenth"> Tenth X </option>
+      <option value="Inter"> Inter XII </option>
+      <option value="Degree"> Degree </option>
+      <option value="Matsers"> Master's </option>
+    </select> <br>
  
 
     <button type="submit" value="submit" class="btn btn-success"> Submit </button>
