--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,15 @@
 
 
 <div>
-    
+
+  <mat-form-field class="example-full-width">
+    <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="picker" placeholder="Choose a date">
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
+
+
+
 </div>
 
 <app-forms></app-forms>
