--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,11 @@
 </div> -->
 
 <!-- <tdf-forms></tdf-forms> -->
-<http></http>
+
+<!-- <http></http> -->
+
+<!-- <button mat-button (click)="openSnackBar()">
+  show snack bar
+</button> -->
 
 <router-outlet></router-outlet>
