--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,6 @@
   show snack bar
 </button> -->
 
-<app-material></app-material>
+<!-- <app-material></app-material> -->
 
 <router-outlet></router-outlet>
