--- a/src/app/material/material.component.css
+++ b/src/app/material/material.component.css
@@ -17,23 +17,7 @@
     text-decoration: none;
     justify-content: center;
 }
-.chip-head{
-    display: flex;
-    position: relative;
-    overflow: hidden;
-    background-color: #32C5D2;
-    font-size: 1.25rem;
-    flex-shrink: 0;
-    align-items: center;
-    user-select: none;
-    border-radius: 50%;
-    justify-content: center;
-    width: 36px;
-    color: #fff;
-    height: 36px;
-    font-size: 20px;
-    margin-right: -4px;
-}
+
 .chip-content{
     cursor: inherit;
     display: flex;
@@ -60,3 +44,11 @@
 .chip-svg:hover{
     color: #666666;
 }
+
+.example-card {
+    max-width: 400px;
+  }
+
+  .example-button-row{
+      padding: 380px 140px 130px 240px;
+  }
