--- a/src/app/material/material.component.html
+++ b/src/app/material/material.component.html
@@ -1,11 +1,10 @@
 <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    <!-- Position Column -->
+    
     <ng-container matColumnDef="position">
       <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
     </ng-container>
   
-    <!-- Name Column -->
     <ng-container matColumnDef="name">
       <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
       <mat-cell *matCellDef="let element;let i=index" (click)="getIndex(i,'name')">
@@ -19,7 +18,7 @@
       </mat-cell>
     </ng-container>
   
-    <!-- Weight Column -->
+  
     <ng-container matColumnDef="weight">
       <mat-header-cell *matHeaderCellDef> Weight </mat-header-cell>
       <mat-cell *matCellDef="let element;let i=index" (click)="getIndex(i,'weight')"> 
@@ -34,7 +33,7 @@
         </mat-cell>
     </ng-container>
   
-    <!-- Symbol Column -->
+  
     <ng-container matColumnDef="symbol">
       <mat-header-cell *matHeaderCellDef> Symbol </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
@@ -43,3 +42,31 @@
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
+
+  <div class="example-button-row">
+    <button mat-button>Basic</button>
+    <button mat-button color="primary" (mouseover)="onHover($event)" (mouseout)="onLeave($event)">Primary</button>
+    <button mat-button color="accent">Accent</button>
+    <button mat-button color="warn">Warn</button>
+    <a mat-button routerLink="." (mouseover)="onHover($event)" (mouseout)="onLeave($event)">Link</a>
+  </div>
+
+
+  <mat-card class="example-card" *ngIf="overlay" [ngStyle]="overlay ? styleObj():'' ">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>Shiba Inu</mat-card-title>
+      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
+        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+        bred for hunting.
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>LIKE</button>
+      <button mat-button>SHARE</button>
+    </mat-card-actions>
+  </mat-card>
