--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
 
 <!-- <tdf-forms></tdf-forms> -->
 
-<!-- <http></http> -->
+<http></http>
 
 <!-- <button mat-button (click)="openSnackBar()">
   show snack bar
