--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,12 +15,12 @@
 
 <!-- <tdf-forms></tdf-forms> -->
 
-<http></http>
+<!-- <http></http> -->
 
 <!-- <button mat-button (click)="openSnackBar()">
   show snack bar
 </button> -->
 
-<!-- <app-material></app-material> -->
+<app-material></app-material>
 
 <router-outlet></router-outlet>
