--- a/src/app/material/material.component.html
+++ b/src/app/material/material.component.html
@@ -1,72 +1,34 @@
-<mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    
-    <ng-container matColumnDef="position">
-      <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
-    </ng-container>
-  
-    <ng-container matColumnDef="name">
-      <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-      <mat-cell *matCellDef="let element;let i=index" (click)="getIndex(i,'name')">
-      <span *ngIf=" !( (i === fitIndex && 'name' === fitName) && enableChip ) "> {{element.name}} </span>  
-      <div class="chip" (click)="remove(i,'name',$event)" [style.display]="!enableChip?'none':'' " *ngIf=" ( (i === fitIndex && 'name' === fitName) && enableChip ) ">
-        <div class="chip-content"> {{element.name}} </div>
-        <div class="chip-close" >
-            <svg class="chip-svg" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"></path></svg>
-        </div>
-      </div>
+<mat-table class="onHover" [dataSource]="dataSource">
+  <ng-container *ngFor="let column of displayedColumns;let i=index" [cdkColumnDef]="column">
+    <mat-header-cell *cdkHeaderCellDef>
+      <h5 class="h5Header GreyLight ">{{displayedColumns[i]}}</h5>
+    </mat-header-cell>
+    <ng-container *ngIf="i === 0">
+      <mat-cell *cdkCellDef="let element"> {{ element[column] }}
       </mat-cell>
     </ng-container>
-  
-  
-    <ng-container matColumnDef="weight">
-      <mat-header-cell *matHeaderCellDef> Weight </mat-header-cell>
-      <mat-cell *matCellDef="let element;let i=index" (click)="getIndex(i,'weight')"> 
-        <span *ngIf=" !( (i === fitIndex && 'weight' === fitName) && enableChip ) "> {{element.weight}} </span>  
-        <div class="chip" (click)="remove(i,'weight',$event)" [style.display]="!enableChip?'none':'' " *ngIf=" ( (i === fitIndex && 'weight' === fitName) && enableChip ) ">
-          <div class="chip-content"> {{element.weight}} </div>
-          <div class="chip-close" >
-              <svg class="chip-svg" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"></path></svg>
+    <ng-container *ngIf="i !== 0">
+      <mat-cell *cdkCellDef="let element;let j=index" (click)="showCandidates(j,column,element)">
+        <span
+          *ngIf=" !( (j === selectedIndex) && column === selectedColumn && enableChip ) ">{{ element[column] }}</span>
+        <div class="chip" (click)="removeChip(j,column,$event)" [style.display]="!enableChip?'none':'' "
+          *ngIf=" ( (j === selectedIndex && column === selectedColumn) && enableChip ) ">
+          <div class="chip-content"> {{element[column]}} </div>
+          <div class="chip-close">
+            <svg class="chip-svg" focusable="false" viewBox="0 0 24 24" aria-hidden="true">
+              <path
+                d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z">
+              </path>
+            </svg>
           </div>
-        </div>  
-        
-        </mat-cell>
+        </div>
+      </mat-cell>
     </ng-container>
-  
-  
-    <ng-container matColumnDef="symbol">
-      <mat-header-cell *matHeaderCellDef> Symbol </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
-    </ng-container>
-  
+  </ng-container>
+  <tr>
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  </tr>
+  <tr>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-  </mat-table>
-
-  <div class="example-button-row">
-    <button mat-button>Basic</button>
-    <button mat-button color="primary" (mouseover)="onHover($event)" (mouseout)="onLeave($event)">Primary</button>
-    <button mat-button color="accent">Accent</button>
-    <button mat-button color="warn">Warn</button>
-    <a mat-button routerLink="." (mouseover)="onHover($event)" (mouseout)="onLeave($event)">Link</a>
-  </div>
-
-
-  <mat-card class="example-card" *ngIf="overlay" [ngStyle]="overlay ? styleObj():'' ">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Shiba Inu</mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-      <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions>
-  </mat-card>
+  </tr>
+</mat-table>
