--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,15 @@
 </button> -->
 
 <!-- <app-material></app-material> -->
-<virtual-scroll></virtual-scroll>
+<!-- <virtual-scroll></virtual-scroll> -->
+
+<mat-tab-group>
+  <mat-tab label="View my Speeches">
+    <view-speech></view-speech>
+  </mat-tab>
+  <mat-tab label="Submit a new Speech">
+    <submit-speech></submit-speech>
+  </mat-tab>
+</mat-tab-group>
 
 <router-outlet></router-outlet>
