--- a/src/app/submit-speech/submit-speech.component.html
+++ b/src/app/submit-speech/submit-speech.component.html
@@ -25,7 +25,7 @@
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
 
-  <button mat-raised-button color="primary" type="submit" [disabled]="myForm.invalid"> SAVE </button>
+  <button mat-raised-button color="primary" type="submit" [disabled]="myForm.invalid" [ngStyle]="{'display':'block'}"> SAVE </button>
 
 
 </form>
