--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,9 +17,9 @@
 
 <!-- <http></http> -->
 
-<button mat-button (click)="openSnackBar()">
+<!-- <button mat-button (click)="openSnackBar()">
   show snack bar
-</button>
+</button> -->
 
 <!-- <app-material></app-material> -->
 <!-- <virtual-scroll></virtual-scroll> -->
